flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: app
spec:
  replicas: 3

  selector:
    matchLabels:
      app: flask-app
  template:
    metadata: 
      labels:
        app: flask-app
    spec:
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "postgres-secrets-kv"
      containers:
      - name: flask-app-container
        image: acr1234.azurecr.io/flask-app:latest
        ports:
        - containerPort: 5000
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
          requests:
            cpu: "250m"
            memory: "128Mi"
        readinessProbe:
          httpGet:
             path: /health
             port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
